--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
   <div class="project">
     <h3>NYC Airbnb Analysis</h3>
     <p>This project explores the spatial and pricing trends of Airbnb listings in New York City using geospatial and statistical analysis.</p>
-    <a href="https://github.com/tepegozersin/nyc-airbnb-analysis" target="_blank">View on GitHub</a>
+    <a href="https://github.com/tepegozersin/nyc-2019-airbnb-analysis" target="_blank">View on GitHub</a>
   </div>
 
   <div class="project">
     <h3>Stack Overflow Technology Trends</h3>
     <p>An analysis of programming language and technology trends using Stack Overflow survey and job listing data.</p>
-    <a href="https://github.com/tepegozersin/stackoverflow-trends" target="_blank">View on GitHub</a>
+    <a href="https://github.com/tepegozersin/DataAnalyticsProject" target="_blank">View on GitHub</a>
   </div>
 
   <div class="project">
-    <h3>World Happiness Report (2016)</h3>
-    <p>A data visualization and correlation analysis project using global happiness data, including dashboards and regional insights.</p>
-    <a href="https://github.com/tepegozersin/world-happiness-analysis" target="_blank">View on GitHub</a>
+    <h3>Cloud-Based Data Analysis</h3>
+    <p>This project contains a comprehensive cloud-based data analysis project focused on eCommerce user behavior and sales performance for October 2019. The project leverages Google BigQuery for data processing and Looker Studio for interactive visualizations.</p>
+    <a href="https://github.com/tepegozersin/Cloud-Based-Data-Analysis" target="_blank">View on GitHub</a>
   </div>
 
   <h2>Contact</h2>
