--- a/index.html
+++ b/index.html
@@ -42,21 +42,33 @@
   <h2>Projects</h2>
 
   <div class="project">
-    <h3>NYC Airbnb Analysis</h3>
-    <p>This project explores the spatial and pricing trends of Airbnb listings in New York City using geospatial and statistical analysis.</p>
-    <a href="https://github.com/tepegozersin/nyc-2019-airbnb-analysis" target="_blank">View on GitHub</a>
-  </div>
-
-  <div class="project">
-    <h3>Stack Overflow Technology Trends</h3>
-    <p>An analysis of programming language and technology trends using Stack Overflow survey and job listing data.</p>
-    <a href="https://github.com/tepegozersin/DataAnalyticsProject" target="_blank">View on GitHub</a>
-  </div>
-
-  <div class="project">
     <h3>Cloud-Based Data Analysis</h3>
     <p>This project contains a comprehensive cloud-based data analysis project focused on eCommerce user behavior and sales performance for October 2019. The project leverages Google BigQuery for data processing and Looker Studio for interactive visualizations.</p>
-    <a href="https://github.com/tepegozersin/Cloud-Based-Data-Analysis" target="_blank">View on GitHub</a>
+    <a href="https://github.com/tepegozersin/Cloud-Based-Data-Analysis.git" target="_blank">View on GitHub</a>
+  </div>
+
+  <div class="project">
+    <h3>HR Income Entry Control Dashboard</h3>
+    <p>This project analyzes salary input errors entered by HR teams, with a focus on identifying anomalies in the income records of employees working in the tourism and hospitality industry.</p>
+    <a href="https://github.com/tepegozersin/powerbi-hr-salary-anomaly.git" target="_blank">View on GitHub</a>
+  </div>
+  
+  <div class="project">
+    <h3>NYC Airbnb Analysis</h3>
+    <p>This project explores the spatial and pricing trends of Airbnb listings in New York City using geospatial and statistical analysis.</p>
+    <a href="https://github.com/tepegozersin/nyc-2019-airbnb-analysis.git" target="_blank">View on GitHub</a>
+  </div>
+
+  <div class="project">
+    <h3>Emerging Tech Trends in Software</h3>
+    <p>This project analyzes trends in programming languages, databases, and developer preferences using data from multiple sources, including the 2019 Stack Overflow Developer Survey and GitHub job postings. </p>
+    <a href="https://github.com/tepegozersin/DataAnalyticsProject.git" target="_blank">View on GitHub</a>
+  </div>
+
+  <div class="project">
+    <h3>US Housing Market Macroeconomic Factors Analysis</h3>
+    <p>This project analyzes the US housing market based on various macroeconomic factors. The goal is to understand how different economic indicators relate to housing prices over time.</p>
+    <a href="https://github.com/tepegozersin/us_housing_market_analysis.git" target="_blank">View on GitHub</a>
   </div>
 
   <h2>Contact</h2>
