--- a/index.html
+++ b/index.html
@@ -77,5 +77,11 @@
     🔗 <a href="https://www.linkedin.com/in/ersin-tepeg%C3%B6z-8710ab366/" target="_blank">LinkedIn Profile</a>
   </p>
 
+  <h2>Resume / CV</h2>
+<p>
+  You can download or view my CV here: 
+  <a href="CV Resume.pdf" target="_blank" rel="noopener noreferrer">Download CV (PDF)</a>
+</p>
+
 </body>
 </html>
