--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
   </p>
 
   <h2>Resume / CV</h2>
-<p>
+  <p>
   You can download or view my CV here: 
-  <a href="CV Resume.pdf" target="_blank" rel="noopener noreferrer">Download CV (PDF)</a>
-</p>
+  <a href="CV_Resume.pdf" target="_blank" rel="noopener noreferrer">Download CV (PDF)</a>
+  </p>
 
 </body>
 </html>
