--- a/index.html
+++ b/index.html
@@ -135,6 +135,12 @@
   <h2>Projects</h2>
 
   <div class="project">
+    <h3>Hotel HR & Finance Dashboard Project</h3>
+    <p>This project presents an end-to-end data analysis workflow for a fictional hotel. It includes data cleaning with Python (Pandas), SQL queries on PostgreSQL, and interactive dashboards built using Tableau. The focus is on Human Resources and Financial metrics.</p>
+    <a href="https://github.com/tepegozersin/Hotel_Project.git" target="_blank" class="button">View on GitHub</a>
+  </div>
+
+  <div class="project">
     <h3>Cloud-Based Data Analysis</h3>
     <p>This project contains a comprehensive cloud-based data analysis project focused on eCommerce user behavior and sales performance for October 2019. The project leverages Google BigQuery for data processing and Looker Studio for interactive visualizations.</p>
     <a href="https://github.com/tepegozersin/Cloud-Based-Data-Analysis.git" target="_blank" class="button">View on GitHub</a>
