--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
   <p class="social-icons">
     <a href="mailto:tepegozersin@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
     <a href="https://github.com/tepegozersin" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
-    <a href="https://www.linkedin.com/in/ersin-tepeg%C3%B6z-8710ab366/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+    <a href="https://www.linkedin.com/in/tepegozersin/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
   </p>
 
   <h2>Resume / CV</h2>
