--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   <p>
   I'm Ersin Tepegoz, a Data Analyst with a background in web programming and a passion for uncovering insights through data. I enjoy working with tools like Python, SQL, BigQuery, Power BI, Tableau and Looker Studio to make data understandable and actionable.
   <br><br>
-  I’ve completed multiple freelance projects involving data analysis, data cleaning, web scraping, and dashboard creation, allowing me to gain hands-on experience with real-world business data.
+  I’ve completed multiple freelance projects involving data analysis, data cleaning, dashboard creation, and web scraping, allowing me to gain hands-on experience with real-world business data.
   <br><br>
   I'm particularly interested in using data storytelling to support decision-making processes and enhance operational efficiency within organizations.
   </p>
