--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
   <div class="project">
     <h3>HR Income Entry Control Dashboard</h3>
-    <p>This project analyzes salary input errors entered by HR teams, with a focus on identifying anomalies in the income records of employees working in the tourism and hospitality industry.</p>
+    <p>This project analyzes salary input errors entered by HR teams, with a focus on identifying anomalies in the income records of employees working in the tourism and hospitality industry, and presents the findings through visualizations created in Microsoft Power BI.</p>
     <a href="https://github.com/tepegozersin/powerbi-hr-salary-anomaly.git" target="_blank" class="button">View on GitHub</a>
   </div>
 
