--- a/index.html
+++ b/index.html
@@ -135,6 +135,18 @@
   <h2>Projects</h2>
 
   <div class="project">
+    <h3>📊 Sales & Customer Insights</h3>
+    <p>
+    Interactive Power BI dashboard analyzing sales performance, product profitability, and customer behavior. Built using a star schema data model and 10+ custom DAX measures (YTD, MTD, Profit Margin, CLV, Shipment KPIs) to deliver actionable business insights.</p>
+    <a href="https://github.com/tepegozersin/sales-insights-powerbi" target="_blank" class="button">View on GitHub</a>
+    <p style="font-size: 0.9em; color: #555;">
+    🔗 <a href="https://app.powerbi.com/view?r=eyJrIjoiYWE2NjBlNjUtNDUzOS00ZDM3LWIxZmMtMjQyMjE5OTI1YjhiIiwidCI6ImExMzM2ODc5LWFiOWMtNDhiYi1iMWFjLWE2OWNhZTJlOGRmZSIsImMiOjl9" target="_blank">Live Dashboard Available</a>
+    </p>
+
+
+  </div>
+
+  <div class="project">
     <h3>Hotel HR & Finance Dashboard Project</h3>
     <p>This project presents an end-to-end data analysis workflow for a fictional hotel. It includes data cleaning with Python (Pandas), SQL queries on PostgreSQL, and interactive dashboards built using Tableau. The focus is on Human Resources and Financial metrics.</p>
     <a href="https://github.com/tepegozersin/Hotel_Project.git" target="_blank" class="button">View on GitHub</a>
