--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   <h2>Projects</h2>
 
   <div class="project">
-    <h3>📊 Sales & Customer Insights</h3>
+    <h3>Sales & Customer Insights</h3>
     <p>
     Interactive Power BI dashboard analyzing sales performance, product profitability, and customer behavior. Built using a star schema data model and 10+ custom DAX measures (YTD, MTD, Profit Margin, CLV, Shipment KPIs) to deliver actionable business insights.</p>
     <a href="https://github.com/tepegozersin/sales-insights-powerbi" target="_blank" class="button">View on GitHub</a>
