--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
   <h2>About Me</h2>
   <p>
-  I'm Ersin Tepegoz, a Data Analyst with a background in web programming and a passion for uncovering insights through data. I enjoy working with tools like Python, SQL, Power BI, Tableau, Looker Studio, BigQuery, and Excel to make data understandable and actionable.
+  I'm Ersin Tepegoz, a Data Analyst with a background in web programming and a passion for uncovering insights through data. I enjoy working with tools like SQL, Python, Power BI, Tableau, Looker Studio, BigQuery, and Excel to make data understandable and actionable.
   <br><br>
   I’ve completed multiple freelance projects involving data analysis, data cleaning, data visualizations, dashboard creation, and web scraping, allowing me to gain hands-on experience with real-world business data.
   <br><br>
@@ -143,7 +143,7 @@
     🔗 <a href="https://app.powerbi.com/view?r=eyJrIjoiYWE2NjBlNjUtNDUzOS00ZDM3LWIxZmMtMjQyMjE5OTI1YjhiIiwidCI6ImExMzM2ODc5LWFiOWMtNDhiYi1iMWFjLWE2OWNhZTJlOGRmZSIsImMiOjl9" target="_blank">Live Dashboard Available</a>
     </p>
 
-
+    
   </div>
 
   <div class="project">
