--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <button class="toggle-btn" onclick="toggleDarkMode()">🌙 Dark Mode</button>
 
   <h1>Ersin Tepegoz</h1>
-  <p>Data & Business Analyst | Python, SQL, Power BI, Tableau | IBM and Microsoft Certified</p>
+  <p>Data & Business Analyst | SQL, Python, Power BI, Tableau | IBM and Microsoft Certified</p>
 
   <h2>About Me</h2>
   <p>
