--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
   <h2>Resume / CV</h2>
   <p>
     You can download or view my CV here: <br>
-    <a href="CV_Resume.pdf" target="_blank" rel="noopener noreferrer" class="button">Download CV (PDF)</a>
+    <a href="Ersin_Tepegoz_Data_Business_Cost_Analyst.pdf" target="_blank" rel="noopener noreferrer" class="button">Download CV (PDF)</a>
   </p>
 
   <footer>
